# storyframe-plus

./: .gitignore  LICENSE  NOTICE.md  README.md  README.vi.md  pyproject.toml  start.bat  start.ps1
.github/workflows/: release.yml
packaging/: README.md  Storyframe.vbs  build.ps1  make_icon.py  storyframe.iss  storyframe_app.pyw
storyframe_cli/: cli.py  proc.py
storyframe_cli/gui/: desktop.py  jobs.py  server.py
storyframe_cli/gui/static/: app.js  index.html  style.css
storyframe_cli/local/: asr.py  bootstrap.py  captions.py  engine.py  fonts.py  media.py  ocr.py  selector.py
tests/: test_local_selector.py  test_storyframe_algorithm.py
