[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "storyframe-plus"
version = "0.3.0"
description = "Extract story transcript frames, audio MP3, and image PDF from local videos or YouTube URLs, via a CLI or a local web GUI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "liteparse",
  "numpy>=1.26",
  "opencv-python-headless>=4.9",
  "pillow>=10",
  "yt-dlp[default]>=2025.1.1",
]

[project.optional-dependencies]
gui = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "python-multipart>=0.0.9",
]
desktop = [
  "pywebview>=5.0",
]
local = [
  "faster-whisper>=1.2",
  "imagehash>=4.3",
  "pytesseract>=0.3",
  "rapidocr>=3.9",
  "rapidfuzz>=3.0",
  "scenedetect>=0.7",
  "scikit-image>=0.25",
]
[project.scripts]
storyframe = "storyframe_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["storyframe_cli*"]

[tool.setuptools.package-data]
storyframe_cli = ["extract_story_transcript_frames.py"]
"storyframe_cli.gui" = ["static/*"]
